@@ -1,0 +1,13 @@
+%(a => 'apple', c => 'cat', d => 'dog', p => 'pHEAR', aa => 33, b => 56L)
+a          is apple
+c          is cat
+d          is dog
+p          is pHEAR
+aa         is 33
+b          is 56
+%(a => 'ordered insert...', c => 'cat', d => 'dog', p => 'pHEAR', aa => 33, b => 56L)
+%(c => 'cat', d => 'dog', p => 'pHEAR', aa => 33, b => 56L)
+%(c => 'cat', d => 'dog', p => 'pHEAR', aa => 33, b => 56L, a => 'at the end')
+%(c => 'cat', d => 'dog', p => 'pHEAR', aa => 33, b => 56L, a => 'at the end', zzz => 'this is at the end of phear')
+%(begin => 'front end', c => 'cat', d => 'dog', p => 'pHEAR', aa => 33, b => 56L, a => 'at the end', zzz => 'this is at the end of phear')
+%(c => 'cat', d => 'dog', p => 'pHEAR', aa => 33, b => 56L, a => 'at the end', zzz => 'this is at the end of phear')
